# audioout-api

./: .gitignore  Makefile  README.md  client.go  client.py  go.mod  go.sum  pyproject.toml
src/audioout_go/: api.go
src/audioout_go/grpc/: audioout.pb.go  audioout.pb.gw.go  audioout_grpc.pb.go
src/audioout_python/: __init__.py  api.py
src/audioout_python/grpc/: audioout_pb2.py
src/proto/: audioout.proto  buf.gen.yaml
