[project]
name = "audioout_api"
version = "0.0.3"
authors = [
  { name="Matt Vella", email="mcvella@gmail.com" },
]
packages = [
  { include = "audioout_python" from = "src" },
]
description = "Viam modular service API that provides audio output capabilities"
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
"Homepage" = "https://github.com/viam-labs/audioout-api"
